[project]
name = "ha-smartyplants"
version = "0.1.0"
requires-python = ">=3.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "UP",
    "W",
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.smartyplants"]
